--- a/static/template/view.html
+++ b/static/template/view.html
@@ -74,6 +74,11 @@
 		<a href="/delete/{{$.Path}}/{{$file.Name}}"> 
 	        <button type="button" class="btn btn-danger" aria-hidden="true">Delete</button>
 		</a>
+		{{ if isZip $file.Name }}
+		<a href="/unzip/{{$.Path}}/{{$file.Name}}"> 
+	        <button type="button" class="btn btn-primary" aria-hidden="true">Unzip</button>
+		</a>
+		{{ end }}
               </td>
             </tr>
             {{ end }}
