--- a/static/template/view.html
+++ b/static/template/view.html
@@ -19,9 +19,10 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="text-center text-primary"> <h1> {{ .Title }} </h1></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
+        <div class="col-md-12"></div>
+        	<div class="text-center text-primary"> <h1> {{ .Title }} </h1></div>
+	</div>
+        <div class="col-md-12">
 
           <ol class="breadcrumb">
             {{ range $index, $item := .Navigation }}
@@ -36,13 +37,16 @@
           <form action="/upload/{{.Path}}" method="POST"  enctype="multipart/form-data">
             <input name="file" type="file" class="file">
           </form>
-
+	</div>
+	<div class="col-md-4">
           <form action="/newdir/{{.Path}}" method="POST" class="form-inline">
 	    <input type="submit" class="btn btn-primary" aria-hidden="true" value="New folder"/>
 	    <div class="form-group">
             <input name="dirname" id="dirname" type="text" class="form-control">
             </div>
           </form>
+	</div>
+	<div class="col-md-4">
 
           <form action="/edit/{{.Path}}" method="GET" class="form-inline">
 	    <input type="submit" class="btn btn-primary" aria-hidden="true" value="New file"/>
@@ -51,6 +55,15 @@
             </div>
           </form>
 
+	</div>
+	<div class="col-md-2">
+
+		<a href="/publish/"> 
+	        <button type="button" class="btn btn-primary" aria-hidden="true">Publish</button>
+		</a>
+
+	</div>
+	<div class="col-md-12">
           <table class="table table-hover">
             <thead>
               <th data-sort="string"> Name </th>
@@ -78,12 +91,16 @@
                 {{ $file.ModTime | humanizeTime }}
               </td>
               <td>
+                {{ if not $file.IsDir }}
 		<a href="/edit/{{$.Path}}/{{$file.Name}}"> 
 	        <button type="button" class="btn btn-primary" aria-hidden="true">Edit</button>
 		</a>
+		{{ end }}
+		<!--
 		<a href="/play/{{$.Path}}/{{$file.Name}}"> 
 	        <button type="button" class="btn btn-primary" aria-hidden="true">Play</button>
 		</a>
+		-->
 		<a href="/delete/{{$.Path}}/{{$file.Name}}"> 
 	        <button type="button" class="btn btn-danger" aria-hidden="true">Delete</button>
 		</a>
@@ -97,7 +114,6 @@
             {{ end }}
           </table>
         </div>
-        <div class="col-md-1"></div>
       </div>
     </div>
   </body>
