Added padding and witdh to html editor

--- a/static/template/edit.html
+++ b/static/template/edit.html
@@ -15,6 +15,12 @@
     <script type="text/javascript" src="{{.RootUrl}}/static/epiceditor/js/epiceditor.min.js"></script>
 
     <style>[class*="foundicon-"] {font-family: GeneralFoundicons;font-style: normal;}</style>
+    <style>
+      .sceditor-button {
+         width: 25px;
+         padding: 1px 1px;
+      }
+    </style>
   </head>
   <body>
 	<div class="container-fluid">
